@@ -31,9 +31,6 @@ android {
         unitTests {
             isIncludeAndroidResources = true
             isReturnDefaultValues = false
-            all {
-                it.jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
-            }
         }
     }
 
